--- a/app/views/layouts/_error.html.erb
+++ b/app/views/layouts/_error.html.erb
@@ -1,12 +1,3 @@
 <div class="input-error">
-<i class="fa-solid fa-triangle-exclamation"></i> <%= field.to_s.titleize %> <%= error.first %>
+  <i class="fa-solid fa-triangle-exclamation me-2"></i> <%= field.to_s.titleize %> <%= error.first %>
 </div>
-
-<style>
-
-.input-error {
-  font-size: .9rem;
-  opacity: 0.5;
-}
-
-</style>
