--- a/app/views/list_item/_new.html.erb
+++ b/app/views/list_item/_new.html.erb
@@ -1,6 +1,10 @@
 <div class="modal-dialog modal-dialog-centered modal-lg">
   <div class="modal-content">
 
+    <%= link_to :back, class: 'dismiss-modal' do %>
+      <i class="fa-solid fa-circle-xmark icon-dismiss"></i>
+    <% end %>
+
     <div class="modal-header">
       <h3>Add Wish</h3>
     </div>
