--- a/app/views/account/search.js.erb
+++ b/app/views/account/search.js.erb
@@ -1,1 +1,1 @@
-$('.search-results-container').html("<%= escape_javascript(render partial: 'results', locals: { results: results }) %>")
+$('.search-results-container').html("<%= escape_javascript(render partial: 'results', locals: { results: results }) %>");
