--- a/app/views/group_member/_new.html.erb
+++ b/app/views/group_member/_new.html.erb
@@ -1,12 +1,14 @@
 <div class="modal-dialog modal-dialog-centered modal-lg">
   <div class="modal-content">
+    <%= link_to :back, class: 'dismiss-modal' do %>
+      <i class="fa-solid fa-circle-xmark icon-dismiss"></i>
+    <% end %>
 
     <span class='modal-success'></span>
 
     <div class="modal-header">
-      <h3>Add Member</h3>
+      <h3>Find a Group Member</h3>
     </div>
-
 
     <div class="modal-body mb-3">
       <div class='row'>
