--- a/app/views/group_member/new.js.erb
+++ b/app/views/group_member/new.js.erb
@@ -1,3 +1,3 @@
 $("#list-item-modal").html("<%= escape_javascript(render partial: 'group_member/new', locals: { account: nil }) %>");
 
-$('#list-item-modal').modal('show')
+$('#list-item-modal').modal('show');
