--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,7 @@
     <%# Enable PWA manifest for installable apps (make sure to enable in config/routes.rb too!) %>
     <%#= tag.link rel: "manifest", href: pwa_manifest_path(format: :json) %>
 
-    <link rel="icon" href="/icon.png" type="image/png">
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/icon.png">
+    <%= render 'application/favicon' %>
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag 'application' %>
@@ -33,11 +31,12 @@
 
   <body>
     <div class='container'>
-      <div id="list-item-modal" class="modal fade" role="dialog"></div>
+      <%= render partial: 'layouts/message' %>
+      <div id="list-item-modal" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" role="dialog"></div>
+      <div id="view-modal" class="modal fade" role="dialog"></div>
+
       <% if current_account.present? %>
         <%= render 'layouts/navigation/nav' %>
-      <% else %>
-        <%= render 'layouts/navigation/nav_auth' %>
       <% end %>
       <div class='content'>
         <%= yield %>
