--- a/app/views/list_item/claim.js.erb
+++ b/app/views/list_item/claim.js.erb
@@ -1,3 +1,3 @@
-$("#<%= escape_javascript(@item_id) %>").html("<%= escape_javascript(render partial: 'list_item/item_inner', locals: { item: @item }) %>");
+$("#<%= escape_javascript(@item_id) %>").html("<%= escape_javascript(render partial: 'list_item/item_inner', locals: { item: @list_item }) %>");
 
 $('[data-toggle="tooltip"]').tooltip()
