--- a/app/views/list/_header.html.erb
+++ b/app/views/list/_header.html.erb
@@ -9,11 +9,20 @@
       <% end %>
       </div>
     </h1>
-    <div class='description pt-5'>
+    <div class='description pt-5 d-flex align-items-center'>
       <span class='pill'>
         <span class='pill-title'>Total Wishes</span> 
         <span><%= @total %></span>
       </span>
+      <% if account == current_account %>
+        <%= link_to new_list_item_path, method: :get, data: { turbo: false, remote: true, toggle: 'modal', target: '#list-item-modal'}, class: 'add-to-list btn me-4' do %>
+          <span class=''>
+            <span class='pill-title'>
+              <i class="fa-solid fa-plus me-3"></i>Add a Wish
+            </span>
+          </span>
+        <% end %>
+      <% end %>
       <% if current_account.id != account&.id %>
       <span class='pill'>
         <span class='pill-title'>Unclaimed</span> 
