--- a/app/views/list_item/_priority_icon.html.erb
+++ b/app/views/list_item/_priority_icon.html.erb
@@ -4,11 +4,11 @@
   </span>
 <% elsif item.loved? %>
   <span data-toggle='tooltip' placement='top' title='Really Wanted'>
-    <i class="fa-solid fa-fire icon-hot-item" ></i>
+    <i class="fa-solid fa-fire icon-hot-item me-2" ></i>
   </span>
 <% elsif item.adored? %>
   <span data-toggle='tooltip' placement='top' title='Really Really Wanted'>
-    <i class="fa-solid fa-fire me-2 icon-med-hot-item" ></i>
+    <i class="fa-solid fa-fire icon-med-hot-item" ></i>
     <i class="fa-solid fa-fire me-2 icon-med-hot-item" ></i>
   </span>
 <% elsif item.needed? %>
