--- a/app/views/list_item/_show.html.erb
+++ b/app/views/list_item/_show.html.erb
@@ -58,7 +58,7 @@
           <div class='text-container'>
             <label>Description</label>
             <div class='text-content'>
-            <%= item.description %>
+              <span class='white-space-preline'><%= item.description %></span>
             </div>
           </div>
         </div>
