--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -100,6 +100,12 @@
   z-index: 3;
 }
 
+.text-content {
+  overflow-y: auto;
+  max-height: 300px;
+}
+
+
 
 .claim {
   border: none;
@@ -112,6 +118,25 @@
   background-color: #9CDBA6;
 }
 
+
+.item .truncated-text {
+  display: -webkit-box;
+  -webkit-line-clamp: 10;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: 400px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.item .head p {
+  max-height: 100%;
+}
+
+.white-space-preline {
+  white-space: pre-line;
+}
 
 
 
