--- a/app/views/list_item/_item_inner.html.erb
+++ b/app/views/list_item/_item_inner.html.erb
@@ -19,7 +19,9 @@
 </div>
 <%= link_to show_list_item_path(item.id), class: 'no-link-style', remote: true do %> 
 <div class="head">
-  <p><%= item.description.truncate(200, omission: '...') %></p>
+  <div class='truncated-text'>
+    <p class='white-space-preline'><%= item.description.truncate(200, omission: '...') %></p>
+  </div>
 </div>
 <% end %>
 <div class="body">
