--- a/app/views/list_item/_my_item.html.erb
+++ b/app/views/list_item/_my_item.html.erb
@@ -18,7 +18,7 @@
           </div>
         </div>
         <div class="body">
-          <%= render partial: 'list_item/price', locals: { item: item } %>
+          <%= render partial: 'list_item/price_range', locals: { item: item } %>
         </div>
       <% end %>
   
