--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,8 @@
-<div class='pt-lg d-flex justify-content-center pb-5'>
+<div class='d-flex justify-content-center pb-5'>
   <%= image_tag "cat-with-hat", class: 'logo logo-big' %>
 </div>
 
-<div class='row mx-auto'>
+<div class='row mx-auto w-100'>
   <div class='col-3'></div>
   <div class='col-6'>
     <div class='card'>
