--- a/app/views/list_item/_form_contents.html.erb
+++ b/app/views/list_item/_form_contents.html.erb
@@ -14,9 +14,19 @@
     <%= f.number_field :price, step: :any, class: 'form-control', value: list_item.price %>
     <%= render_errors(list_item, :price) %> 
   </div>
+  <div class='col-12 mb-3 row'>
+    <%= f.label 'Price Range' %>
+    <div class='col-6'>
+      <%= f.number_field :low_price, step: :any, placeholder: 'Low Price', class: 'form-control', value: list_item.low_price %>
+    </div>
+    <div class='col-6'>
+      <%= f.number_field :high_price, step: :any, placeholder: 'High Price', class: 'form-control', value: list_item.high_price %>
+    </div>
+    <%= render_errors(list_item, :cost) %> 
+  </div>
   <div class='col-12 mb-5'>
     <%= f.label 'How much do you want this?' %>  
-    <%= f.select :priority, options_for_select(priority_options), {}, class: 'form-select', value: list_item.priority %>
+    <%= f.select :priority, options_for_select(priority_options), { include_blank: true }, class: 'form-select', value: list_item.priority %>
     <%= render_errors(list_item, :priority) %>
   </div>
   <%= f.hidden_field :list_id, value: @current_account.list.id %>
