--- a/app/views/list/my_claims.html.erb
+++ b/app/views/list/my_claims.html.erb
@@ -1,16 +1,19 @@
 <section class='header pb-5'>
-  <div class='row'>
-    <div class='col-12'>
-      <h1>Gifts I'm Giving</h1>
+  <div class='head-content'>
+    <h1>
+      <div class='d-flex justify-space-between'>
+        Gifts I'm Giving
+      </div>
+    </h1>
+    <div class='description pt-5 d-flex'>
+      <span class='pill'>
+        <span class='pill-title'>Total</span> 
+        <span><%= @total %></span>
+      </span>
     </div>
   </div>
-  <div class='description pt-5'>
-    <span class='pill'>
-      <span class='pill-title'>Total</span> 
-      <span><%= @total %></span>
-    </span>
-  </div>
 </section>
+
 
 <%= form_for :filters, method: :get do |f| %>
   <div class='row'>
