--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -425,6 +425,15 @@ textarea {
   transition: top 0.2s ease-in;
 }
 
+.action.view-item {
+  left: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 1rem;
+  background: #56a963;
+}
+
 .action.edit-item {
   left: 60px;
 }
@@ -581,4 +590,45 @@ font-size: 1.5rem;
 .description-text {
   font-weight: 300;
   font-size: 1.25rem;
+}
+
+// tags
+
+.icon-light {
+  color: white;
+}
+
+.tags {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: -25px;
+}
+
+
+.tag {
+  background: #cecece;
+  border-radius: 21px;
+  padding: 8px 15px;
+  font-weight: 600;
+  margin-right: 1rem;
+  white-space: nowrap;
+  font-size: .9rem;
+  margin-bottom: 10px;
+}
+
+.select2.select2-container {
+  width: 100% !important;
+}
+
+.select2-container--open .select2-dropdown {
+  z-index: 9999 !important;
+}
+
+.select2-selection.select2-selection--multiple {
+  min-height: 38px !important;
+}
+
+.select2-container--default.select2-container--focus .select2-selection--multiple,
+.select2-selection.select2-selection--multiple {
+  border-color: #dee2e6 !important;
 }
