--- a/app/views/list_item/_show.html.erb
+++ b/app/views/list_item/_show.html.erb
@@ -54,6 +54,15 @@
             </div>
           </div>
         </div>
+        <% if item.tags.present? %>
+          <div class='tags mt-5'>
+            <% item.tags.each do |tag| %>
+              <span class='tag'>
+                <i class="fa-solid fa-tag me-2 icon-light"></i><%= tag.name %>
+              </span>
+            <% end %> 
+          </div>
+        <% end %>
 
         <% if !item.claimed? && !item.owned_by?(current_account) %>
           <div class='col-12 mt-4 d-flex justify-content-end pb-3 pt-3'>
