form validation stuff

--- a/app/views/list_item/_show.html.erb
+++ b/app/views/list_item/_show.html.erb
@@ -2,7 +2,7 @@
   <div class="modal-content">
 
     <div class='dismiss-modal'>
-      <i class="fa-solid fa-circle-xmark icon-dismiss"></i>
+      <i class="fa-solid fa-circle-xmark icon-dismiss" data-bs-dismiss="modal"></i>
     </div>
 
     <div class="modal-header">
