--- a/app/views/list_item/_form_contents.html.erb
+++ b/app/views/list_item/_form_contents.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class='col-12 mb-3 mt-3'>
     <%= f.label 'Item URL' %>
-    <%= f.text_field :url, class: 'form-control', value: list_item.url %>
+    <%= f.text_field :url, class: 'form-control', enterkeyhint: "next", value: list_item.url %>
     <%= render_errors(list_item, :url) %> 
   </div>
   <div class='col-12 mb-3 mt-3 row'>
@@ -29,10 +29,10 @@
     <%= f.select :tag_ids, options_for_select(Tag.all.order(:name).map { |t| [t.name, t.id] }, list_item.tags.ids), { multiple: 'multiple' }, class: 'form-select multiselect-field' %>
   </div>
   <%= f.hidden_field :list_id, value: @current_account.list.id %>
-  <div class='col-12 d-flex justify-content-between'>
-    <%= link_to :back do %>
-    <button class="btn btn-default cancel" data-bs-dismiss="modal" aria-hidden="true">Cancel</button>
-    <% end %>
+  <div class='col-12 d-flex justify-content-between flex-row-reverse'>
     <%= f.submit 'Submit', class: 'btn submit' %>
+    <%= link_to :back do %>
+      <button class="btn btn-default cancel" data-bs-dismiss="modal" aria-hidden="true">Cancel</button>
+    <% end %>
   </div>
 </div>
