--- a/app/views/list_item/edit.js.erb
+++ b/app/views/list_item/edit.js.erb
@@ -2,3 +2,9 @@ $("#list-item-modal").html("<%= escape_javascript(render partial: 'list_item/edi
 
 $('#list-item-modal').modal('show')
 $('.multiselect-field').select2({ width: 'resolve'});
+
+$(document).on("keydown", ":input:not(textarea):not(:submit)", function(event) {
+  if (event.key == "Enter") {
+    event.preventDefault();
+  }
+});
