small style enhancements

--- a/app/views/list_item/_item_inner.html.erb
+++ b/app/views/list_item/_item_inner.html.erb
@@ -6,6 +6,7 @@
     <%= render partial: 'list_item/priority_icon', locals: { item: item } %>
 
     <% if item.url.present? %>
+      <span class='me-2'></span>
       <%= link_to item.url, class: 'item-link', data: { toggle: 'tooltip', placement: 'top'}, title: 'Gift URL', target: '_blank' do %>
         <i class="fa-solid fa-link icon"></i>
       <% end %>
