--- a/app/views/list_item/_edit.html.erb
+++ b/app/views/list_item/_edit.html.erb
@@ -6,7 +6,7 @@
     </div>
 
     <div class="modal-body">
-      <%= form_for :list_item, url: update_list_item_path(list_item.id), method: :patch do |f| %>
+      <%= form_for :list_item, url: update_list_item_path(list_item.id), method: :patch, remote: true do |f| %>
         <%= render partial: 'form_contents', locals: { f: f, list_item: list_item } %>
       <% end %>
     </div>
