--- a/app/views/list_item/_my_item.html.erb
+++ b/app/views/list_item/_my_item.html.erb
@@ -5,6 +5,7 @@
         <span>
           <%= render partial: 'list_item/priority_icon', locals: { item: item } %>
           <% if item.url.present? %>
+            <span class='me-2'></span>
             <%= link_to item.url, class: 'item-link', data: { toggle: 'tooltip', placement: 'top'}, title: 'Gift URL', target: '_blank' do %>
               <i class="fa-solid fa-link icon"></i>
             <% end %>
