--- a/app/views/list/_filter.html.erb
+++ b/app/views/list/_filter.html.erb
@@ -2,43 +2,42 @@
 
 <%= form_for :filters, method: :get do |f| %>
   <div class='row'>
-    <div class='col-5'>
+    <div class='col-12 col-lg-5'>
       <%= f.label 'Person' %>
       <%= f.select :account, options_for_select(account_options, params.dig(:filters, 'account')), { prompt: 'Select a Person' }, { class: 'form-select' } %>
     </div>
-    <div class='col-5'>
+    <div class='col-12 col-lg-5 mt-3 mt-lg-0'>
       <%= f.label 'Sort Order' %>
       <%= f.select :sort_by, options_for_select(sort_options, params.dig(:filters, :sort_by)), { prompt: 'Sort By...'}, { class: 'form-select' } %>
     </div>
-    <div class='col-2 btn-col'>
+    <div class='col-12 col-lg-2 mt-4 mt-lg-0 btn-col'>
     <%= f.submit 'Filter', class: 'btn' %>
     </div>
   </div> 
 <% end %>
 
+<% end %>
 
-<% else %>
+<% if !is_my_list %>
 
 <%= form_for :filters, method: :get do |f| %>
   <div class='row'>
-    <div class='col-4'>
+    <div class='col-12 col-lg-4'>
       <%= f.label 'Person' %>
       <%= f.select :account, options_for_select(account_options, params.dig(:filters, 'account')), { prompt: 'Select a Person' }, { class: 'form-select' } %>
     </div>
-    <div class='col-3'>
+    <div class='col-12 col-md-6 col-lg-3 mt-3 mt-lg-0'>
       <%= f.label 'Sort Order' %>
       <%= f.select :sort_by, options_for_select(sort_options, params.dig(:filters, :sort_by)), { prompt: 'Sort By...'}, { class: 'form-select' } %>
     </div>
-    <div class="col-3">
+    <div class="col-12 col-md-6 col-lg-3 mt-3 mt-lg-0">
       <%= f.label 'Status' %>
       <%= f.select :status, options_for_select(claim_options, params.dig(:filters, :status)), {}, { class: 'form-select' } %>
     </div>
-    <div class='col-2 btn-col'>
-    <%= f.submit 'Filter', class: 'btn' %>
+    <div class='col-12 col-lg-2 mt-4 mt-lg-0 btn-col'>
+      <%= f.submit 'Filter', class: 'btn' %>
     </div>
   </div> 
 <% end %>
 
 <% end %>
-
-
