--- a/app/views/list/_header.html.erb
+++ b/app/views/list/_header.html.erb
@@ -10,7 +10,7 @@
       </div>
     </h1>
     <div class='description pt-5 d-flex align-items-center'>
-      <span class='pill'>
+      <span class='pill d-flex'>
         <span class='pill-title'>Total Wishes</span> 
         <span><%= @total %></span>
       </span>
