--- a/app/views/group/_group_members.html.erb
+++ b/app/views/group/_group_members.html.erb
@@ -1,4 +1,5 @@
-<table class="table">
+<div class='overflow-x-scroll no-scroll-style'>
+<table class="table no-scroll-style">
   <thead>
     <tr>
       <th scope="col">Name</th>
@@ -14,3 +15,4 @@
     <% end %>
   </tbody>
 </table>
+</div>
