--- a/app/views/group/_my_group.html.erb
+++ b/app/views/group/_my_group.html.erb
@@ -1,5 +1,5 @@
-<section class='actions mt-5'>
-  <%= link_to new_group_member_path, class: 'pill btn', remote: true do %>
+<section class='actions mt-md-5'>
+  <%= link_to new_group_member_path, class: 'pill btn justify-content-center justify-content-md-start align-items-center mx-auto mx-md-0', remote: true do %>
     <i class="fa-solid fa-plus me-3"></i> Add Members
   <% end %>
 </section>
