--- a/app/views/group/index.html.erb
+++ b/app/views/group/index.html.erb
@@ -1,10 +1,24 @@
-<section class='header'>
-  <div class='row'>
-    <div class='col-12'>
-      <h1>My Group</h1>
+<div class='d-block d-md-none'>
+  <section class='header pb-2'>
+    <div class='head-content'>
+      <h1>
+        <div class='d-flex justify-content-center font-weight-bold'>
+          My Group
+        </div>
+      </h1>
     </div>
-  </div>
-</section>
+  </section>
+</div>
+
+<div class='d-none d-md-block'>
+  <section class='header'>
+    <div class='row'>
+      <div class='col-12'>
+        <h1>My Group</h1>
+      </div>
+    </div>
+  </section>
+</div>
 
 <% if @group.present? %>
   <%= render partial: 'my_group', locals: { group: @group } %>
