--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -3,7 +3,7 @@
     <div class='col-12 mt-5'>
       <%= f.text_field :first_name, placeholder: 'First Name', class: 'form-control form-control-lg' %>
     </div>
-    <div class='col-12 mt-4'>
+    <div class='col-12 mt-4 mx-0 mx-md-2'>
       <%= f.text_field :last_name, placeholder: 'Last Name', class: 'form-control form-control-lg' %>
     </div>
     <div class='col-12 mt-5 d-flex justify-content-center'>
