--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,12 +3,12 @@
 </div>
 
 <div class='row mx-auto w-100'>
-  <div class='col-3'></div>
-  <div class='col-6'>
+  <div class='col-md-3'></div>
+  <div class='col-12 col-md-6 px-0'>
     <div class='card'>
       <div class='text-center'>
-        <p class='title mt-5 mb-3'>Login or Sign-up Below</p>
-        <div class='mt-5 mb-5'>
+        <p class='title mt-3 mt-md-5 mb-2 mb-md-3'>Login or Sign-up Below</p>
+        <div class='mt-4 mt-md-5 mb-3'>
           <%= button_to account_google_oauth2_omniauth_authorize_path(prompt: 'select_account'), method: :post, :data => {turbo: "false"}, class: 'btn btn-lg sign-up' do %>
             <i class="fa-brands fa-google me-3"></i>Login with Google
           <% end %>
@@ -16,5 +16,5 @@
       </div>
     </div>
   </div>
-  <div class='col-3'></div>
+  <div class='col-md-3'></div>
 </div>
