--- a/app/views/layouts/_message.html.erb
+++ b/app/views/layouts/_message.html.erb
@@ -1,7 +1,10 @@
 <% flash.each do |type, msg| %>
-  <div>
-    <div class='message'>
-      <%= msg %>
-    </div>
+<div class='message with-progress'>
+  <div class='text'>
+    <%= msg %>
   </div>
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+  </div>
+</div>
 <% end %>
