--- a/app/views/list/index.html.erb
+++ b/app/views/list/index.html.erb
@@ -1,6 +1,13 @@
-<%= render partial: 'header', locals: { account: @account } %>
+<div class='d-md-none'>
+  <%= render partial: 'list/mobile/header', locals: { account: @account } %>
+  <%= render partial: 'list/mobile/filter', locals: { is_my_list: @account&.id == current_account.id } %>
+  <%= render partial: 'list/mobile/pills', locals: { account: @account } %>
+</div>
 
-<%= render partial: 'filter', locals: { is_my_list: @account&.id == current_account.id } %>
+<div class='d-none d-md-block'>
+  <%= render partial: 'header', locals: { account: @account } %>
+  <%= render partial: 'filter', locals: { is_my_list: @account&.id == current_account.id } %>
+</div>
 
 <section class='list'>
   <% if @list_items.blank? %>
