--- a/app/views/list/my_claims.html.erb
+++ b/app/views/list/my_claims.html.erb
@@ -1,35 +1,14 @@
-<section class='header pb-5'>
-  <div class='head-content'>
-    <h1>
-      <div class='d-flex justify-space-between'>
-        Gifts I'm Giving
-      </div>
-    </h1>
-    <div class='description pt-5 d-flex'>
-      <span class='pill'>
-        <span class='pill-title'>Total</span> 
-        <span><%= @total %></span>
-      </span>
-    </div>
-  </div>
-</section>
+<div class='d-md-none'>
+  <%= render partial: 'list/mobile/my_claims/header' %>
+  <%= render partial: 'list/mobile/my_claims/filter', locals: { params: params } %>
+</div>
+
+<div class='d-none d-md-block'>
+  <%= render partial: 'list/my_claims/header', locals: { total: @total } %>
+  <%= render partial: 'list/my_claims/filter', locals: { params: params } %>
+</div>
 
 
-<%= form_for :filters, method: :get do |f| %>
-  <div class='row'>
-    <div class='col-5'>
-      <%= f.label 'Recipient' %>
-      <%= f.select :recipient_id, options_for_select(recipient_options, params.dig(:filters, :recipient_id)), { prompt: 'Select a Person' }, { class: 'form-select' } %>
-    </div>
-    <div class='col-5'>
-      <%= f.label 'Sort Order' %>
-      <%= f.select :sort_by, options_for_select(sort_options, params.dig(:filters, :sort_by)), { prompt: 'Sort By...'}, { class: 'form-select' } %>
-    </div>
-    <div class='col-2 btn-col'>
-    <%= f.submit 'Filter', class: 'btn' %>
-    </div>
-  </div> 
-<% end %>
 
 <% if @list_items.empty? %>
   <section class='list'>
