--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -109,13 +109,11 @@
 
 .claim {
   border: none;
-  background-color: #50B498;
-  color: white;
-  border-radius: 5px;
+  margin-right: -10px;
 }
 
-.claim.unclaimed {
-  background-color: #9CDBA6;
+.claim.unclaimed .icon-bg {
+  color: #9CDBA6;
 }
 
 
